--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- ♠♣♥♦ -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,18 +12,27 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div id="container">
+      <div id="cardbody">
+        <div id="cardline">
+          <div id="cardtop">
+            <h1 id="symbol">♠</h1>
+          </div>
+
+          <div id="cardmiddle">
+            <h1>5</h1>
+          </div>
+
+          <div id="cardbottom">
+            <h1 id="symbol">♠</h1>
+          </div>
+        </div>
       </div>
     </div>
   </body>
